# 2022-SuwonUniv_Dacon

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_modeling.ipynb  README.md
notebooks/original/: [2022_수원대]_Stage_1_구내식당_식수_예측_2.ipynb  [2022_수원대]_Stage_1_구내식당_식수_예측_3.ipynb  파이썬_과제1_ipynb.ipynb
scripts/: train.py
siksu/: 2_수원대_과제_구성준.ipynb  3_수원대_과제_구성준.ipynb  [2022_수원대]_Stage_1_구내식당_식수_예측_1_파이썬.ipynb  [2022_수원대]_Stage_1_구내식당_식수_예측_2_파이썬_ipynb.ipynb  [2022_수원대]_Stage_1_구내식당_식수_최종_예측_구성준.ipynb
src/siksu/: config.py  features.py  modeling.py  pipeline.py
tests/: test_features.py
