[project]
name = "suwonuniv-dacon-siksu"
version = "0.1.0"
description = "Cafeteria meal-count prediction pipeline for the 2022 Suwon University DACON competition."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5",
  "scikit-learn>=1.1",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
